# AbelTomato-Adventure-RPG

./: .clang-format  .gitignore  CMakeLists.txt  README.md  base_skill.hpp  battle_system.cpp  config.hpp  creature.cpp  creature.hpp  definitions.hpp  fix_identity.sh  global.hpp  main.cpp  monster.cpp  monster.hpp  player.cpp  player.hpp  stat_calculator.hpp  设计规划.md
data/: buff.json  config.json  effect.json  job.json  race.json  skill.json  skills.json
docs/: ### 1.3.Hard Constants.txt  data_schema.md  development_path.md  game_design_spec.md  inventory_design.md  属性计算和战斗逻辑的重构.md  番茄勇者RPG开坑记.md  设定文档.md
include/: battle_system.hpp  creature.hpp  stat_calculator.hpp
include/Interface/: Interactable.hpp
include/Inventory/: inventory_component.hpp  inventory_menu.hpp  inventory_slot.hpp  inventory_tool_tip.hpp
include/components/: behavior_component.hpp  effect_component.hpp  stat_bonus_component.hpp
include/config/: game_config.hpp  game_constants.hpp  skill_definitions.hpp
include/core/: creature.hpp  definitions.hpp  global.hpp
include/data/: base_data.hpp  buff_data.hpp  condition_data.hpp  effect_data.hpp  item_data.hpp  job_data.hpp  race_data.hpp  skill_data.hpp
include/datas/: base_data.hpp  buff_data.hpp  effect_data.hpp  item_data.hpp  job_data.hpp  race_data.hpp  skill_data.hpp
include/definitions/: attribute_id.hpp  base_type.hpp  behavior_type.hpp  buff_type.hpp  combat_type.hpp  condition_type.hpp  core_attributes.hpp  effect_type.hpp  error_type.hpp  item_type.hpp  property_containers.hpp  skill_type.hpp
src/: main.cpp
(+69 files in other folders)
